examples/neg/doccomment.effekt
/// main function
def main() = {
  /// cool number
  val x = 42

  println(x)
}
